--- a/packages/sampleapp.plist
+++ b/packages/sampleapp.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/fahim-ihis/iosenterprise/packages/Apps/SampleApp.ipa</string>
+					<string>https://github.com/fahim-ihis/iosenterprise/releases/download/v1.0/SampleApp.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
